Fixed wrap text in project tech list.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3455,6 +3455,7 @@ input, select, textarea {
     padding: 5px 10px;
     border-radius: 50px;
     font-size: 0.875rem;
+	white-space: nowrap;  /* ← added */
 }
 
 .project-tech-list li:hover {
